Revert "Update 用户-角色-部门.md"
This reverts commit 59c657f0665c3649add42c053588afd48b8ab5b9.

--- a/可重用代码/数据权限/用户-角色-部门.md
+++ b/可重用代码/数据权限/用户-角色-部门.md
@@ -188,7 +188,7 @@ public class DataScopeAspect {
 
 具体实现参考https://github.com/wangliu1102/wl-guns 中角色管理的数据权限配置
 
-![img](https://github.com/wangliu1102/wl-guns/edit/master/%E5%8F%AF%E9%87%8D%E7%94%A8%E4%BB%A3%E7%A0%81/img/8e09259f-45c9-4770-bc50-4ece75af39ca.png)
+![img](../img/8e09259f-45c9-4770-bc50-4ece75af39ca.png)
 
 使用admin登录，去用户管理查看用户列表，可以看到所有用户，因为admin为超级管理员用户。
 
@@ -196,4 +196,4 @@ public class DataScopeAspect {
 
 再用test用户登录，去用户管理只能看到自己一条记录。
 
-![img](https://github.com/wangliu1102/wl-guns/edit/master/%E5%8F%AF%E9%87%8D%E7%94%A8%E4%BB%A3%E7%A0%81/img/9f43d3c0-2134-4959-9177-9e866ad45fd3.png)
+![img](../img/9f43d3c0-2134-4959-9177-9e866ad45fd3.png)
